# tree-sitter-ely

./: CMakeLists.txt  Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: identifier.txt  list.txt  number.txt  string.txt
src/: grammar.json  node-types.json  parser.c
